# checkers

./: CMakeLists.txt  README.md  draught.h  figures.cpp  figures.h  game.h
Debug/: Сhecker.ilk
x64/Debug/: lnk{53F5A827-F465-4FE3-8211-A428A34D0B72}.tmp
Сhecker/: Board.h  Checker.h  Checkers.cpp  Checkers_on_board.h  Game.h  Square.h  Сhecker.vcxproj
Сhecker/Debug/: vc142.idb  Сhecker.exe.recipe  Сhecker.ilk
Сhecker/Debug/Сhecker.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.delete.1.tlog  link.read.1.tlog  link.write.1.tlog  Сhecker.lastbuildstate
Сhecker/x64/Debug/: vc142.idb  Сhecker.exe.recipe
Сhecker/x64/Debug/Сhecker.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Сhecker.lastbuildstate
